# Diddycrypt

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml  rust.yml  rustfmt.yml
src/: main.rs
